画像投稿機能実装

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -7,6 +7,7 @@
 <table class="table table-bordered border-primary table-hover table-sm posts_table">
   <thead>
     <tr>
+      <th scope="col">イメージ</th>
       <th scope="col">公園</th>
       <th scope="col">概要</th>
       <th scope="col">所在地</th>
@@ -19,12 +20,13 @@
 
     <% @posts.each do |post| %>
         <tr>
+            <td><%= image_tag post.image_url(:thumb) if post.image.present? %></td>
             <td><%= post.park %></td>
             <td><%= post.outline %></td>
             <td><%= post.location %></td>
             <td><%= post.access %></td>
-            <td><%= post.created_at %></td>
-            <td><%= post.updated_at %></td>
+            <td><%= post.created_at.to_s(:datetime_base) %></td>
+            <td><%= post.updated_at.to_s(:datetime_base) %></td>
         </tr>
       <% end %>
   </tbody>
