--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -9,3 +9,11 @@
         cursor: pointer;
     }
 }
+
+/* index */
+.thumbnail {
+  float: left;
+  margin: 25px;
+  width: 200px;
+  height: 200px;
+}
