--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,11 +1,12 @@
-<div class="d-flex align-items-center btn btn-info">
+<div class="d-flex align-items-center">
     <h1>公園一覧</h1>
     <div class="ml-auto posts_button">
-        <a class="btn btn-outline-info" href="/posts/new" role="button" class="btn btn-info">投稿</a>
+      <%= link_to '投稿', new_post_path, class: "btn btn-outline-info" %>
     </div>
 </div>
+
 <table class="table table-bordered border-primary table-hover table-sm posts_table">
-  <thead>
+  <thead class="thead-light">
     <tr>
       <th scope="col">イメージ</th>
       <th scope="col">公園</th>
@@ -14,6 +15,8 @@
       <th scope="col">交通アクセス</th>
       <th scope="col">投稿日</th>
       <th scope="col">更新日時</th>
+      <th></th>
+      <th></th>
     </tr>
   </thead>
   <tbody>
@@ -25,8 +28,10 @@
             <td><%= post.outline %></td>
             <td><%= post.location %></td>
             <td><%= post.access %></td>
-            <td><%= post.created_at.to_s(:datetime_base) %></td>
-            <td><%= post.updated_at.to_s(:datetime_base) %></td>
+            <td><%= post.created_at %></td>
+            <td><%= post.updated_at %></td>
+            <td><%= link_to "詳細" , post, class: 'btn btn-outline-info' %></td>
+            <td><%= link_to "削除" , post, class: 'btn btn-outline-info', method: :delete, data: {confirm: "投稿記事を削除しますか？", cancel: "キャンセル", commit: "削除する", title: "削除の確認"} %></td>
         </tr>
       <% end %>
   </tbody>
