--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,7 +1,8 @@
 <div class="d-flex align-items-center">
   <h1>投稿</h1>
   <div class="ml-auto posts_button">
-      <a class="btn btn-outline-info" href="/posts">投稿一覧</a>
+    <%= link_to '投稿一覧', posts_path, class: 'btn btn-outline-info' %>
+</div>
   </div>
 </div>
 <%= form_for @post do |f| %>
