--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,8 +2,8 @@
 
 <div class="d-flex align-items-center mt-4 mb-4">
     <div class="ml-auto posts_button">
-        <a class="btn btn-outline-info" href="/posts" role="button">投稿一覧</a>
-        <a class="btn btn-outline-info" href="/posts" role="button">編集</a>
+      <%= link_to '投稿一覧', posts_path, class: "btn btn-outline-info" %>
+      <%= link_to '編集', edit_post_path(@post), class: "btn btn-outline-info" %>
     </div>
 </div>
 
@@ -11,6 +11,7 @@
   <div class="card-header bg-info text-white">
     <h4><%= @post.park %></h4>
   </div>
+
   概要
   <div class="card-body">
     <p class="card-text"><%= simple_format(@post.outline) %></p>
