--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -7,8 +7,7 @@
 </div>
 
 <table class="table table-bordered border-primary table-hover table-sm posts_table">
-  <thead class="thead-info">
-    
+  <thead class="thead-light">
     <tr>
       <th scope="col">イメージ</th>
       <th scope="col">公園</th>
