--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -17,3 +17,25 @@
   width: 200px;
   height: 200px;
 }
+
+
+/*main-contents*/
+.main-contents{
+  border: 1px solid gray;
+  margin-top: 20px;
+}
+
+.main-image img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.content-wrapper{
+  padding: 15px;
+  overflow:hidden;
+}
+
+.prak{
+  margin: 10px 0;
+}
