--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,36 +1,20 @@
 <div class="container">
-  <%= render 'shared/flash_messages' %>
-<div class="d-flex align-items-center">
-    <h1>公園一覧</h1>
-</div>
-
-<table class="table table-bordered border-primary table-hover table-sm posts_table">
-  <thead class="thead-light">
-    <tr>
-      <th scope="col">イメージ</th>
-      <th scope="col">公園</th>
-      <th scope="col">概要</th>
-      <th scope="col">所在地</th>
-      <th scope="col">交通アクセス</th>
-      <th scope="col">投稿日</th>
-      <th scope="col">更新日時</th>
-      <th></th>
-    </tr>
-  </thead>
-  <tbody>
-
-    <% @posts.each do |post| %>
-        <tr>
-            <td><%= image_tag post.image_url(:thumb) if post.image.present? %></td>
-            <td><%= post.park %></td>
-            <td><%= post.outline %></td>
-            <td><%= post.location %></td>
-            <td><%= post.access %></td>
-            <td><%= post.created_at %></td>
-            <td><%= post.updated_at %></td>
-            <td><%= link_to "詳細" , post, class: 'btn btn-outline-info' %></td>
-        </tr>
-      <% end %>
-  </tbody>
-</table>
-</div>
+            <div class="row">
+            	<% @posts.each do |post| %>
+                <div class="col-md-4 col-sm-6 col-xs-12">
+                    <%= link_to("/posts/#{post.id}") do %>
+                    <div class="main-contents">
+                        <div class="main-image">
+                            <%= image_tag post.image_url(:thumb) if post.image.present? %>
+                        </div>
+                        <div class="content-wrapper">
+                            <div class="park">
+                                <p><%= link_to(post.park,"/posts/#{post.id}") %></p>
+                                <p><%= post.access %></p>
+                            </div>
+                        </div>
+                    </div>
+                    <% end %>
+                </div>
+                <% end %>
+            </div>
