--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,27 +1,25 @@
+<div class="show container">
 
+        <div class="show-park">
+            <p><%= @post.park %></p>
+        </div>
+        <div class="show-image">
+            <%= image_tag @post.image_url(:thumb) if @post.image.present? %>
+        </div>
+        <div class="show-outline">
+            <p><%= @post.outline %></p>
+        </div>
+        <div class="show-locate">
+            <p>所在地</p>
+            <p><%= @post.location %></p>
+        </div>
+        <div class="show-access">
+            <p>アクセス</p>
+            <p><%= @post.access %></p>
+        </div>
 
-<div class="d-flex align-items-center mt-4 mb-4">
-    <div class="ml-auto posts_button">
-      <%= link_to '投稿一覧', posts_path, class: "btn btn-outline-info" %>
-      <%= link_to '編集', edit_post_path(@post), class: "btn btn-outline-info" %>
-    </div>
-</div>
-
-<div class="card">
-  <div class="card-header bg-info text-white">
-    <h4><%= @post.park %></h4>
-  </div>
-
-  概要
-  <div class="card-body">
-    <p class="card-text"><%= simple_format(@post.outline) %></p>
-  </div>
-  所在地
-  <div class="card-body">
-    <p class="card-text"><%= simple_format(@post.location) %></p>
-  </div>
-  交通アクセス
-  <div class="card-body">
-    <p class="card-text"><%= simple_format(@post.access) %></p>
-  </div>
+        <div class="ml-auto posts_button">
+            <a class="btn btn-outline-info" href="/posts" role="button">公園一覧へ</a>
+        </div>
+        
 </div>
