--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,3 +1,4 @@
+<%= render 'shared/flash_messages' %>
 <div class="container">
             <div class="row">
             	<% @posts.each do |post| %>
