--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,12 +1,14 @@
-<header>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div id="Navber">
       <ul class="navbar-nav">
         <% if user_signed_in? %>
+        <p> <%= current_user.name %> さんがログインしています </p>
           <li class="nav-item active">
             <%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: 'nav-link' %>
           </li>
       　<% else %>
+          <p> ログインしていません </p>
+
           <li class="nav-item active">
             <%= link_to "新規登録", new_user_registration_path, class: 'nav-link' %>
           </li>
@@ -17,4 +19,3 @@
       </ul>
     </div>
   </nav>
-</header>
