--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,73 +1,31 @@
-<<<<<<< HEAD
-<div class="container">
-  <h2><%= t('.sign_up') %></h2>
-=======
 <div class="container-login">
-  <h1><%= t('.sign_up') %></h1>
->>>>>>> 4a42badc885ba6d8b63d05fae30848233474b018
+  <h2>新規登録</h2>
 
-  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-    <%= bootstrap_devise_error_messages! %>
+<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+  <%= render "devise/shared/error_messages", resource: resource %>
 
-    <div class="field">
-    <%= f.label :name %> <br />
-    <%= f.text_field :name %>
+  <div class="field">
+    <%= f.label :email %><br />
+    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
   </div>
 
-<<<<<<< HEAD
   <div class="field">
     <%= f.label :password %>
     <% if @minimum_password_length %>
-    <em><%= t('devise.shared.minimum_password_length', count: @minimum_password_length) %></em>
+    <em>(<%= @minimum_password_length %>文字以上)</em>
     <% end %><br />
     <%= f.password_field :password, autocomplete: "new-password" %>
   </div>
-=======
-    <div class="form-group">
-      <%= f.label :email %>
-      <%= f.email_field :email, autofocus: true,
-                        autocomplete: 'email',
-                        class: 'form-control',
-                        required: true,
-                        maxlength: '100' %>
-    </div>
->>>>>>> 4a42badc885ba6d8b63d05fae30848233474b018
 
-    <div class="form-group">
-      <%= f.label :password %>
-      <%= f.password_field :password,
-                           autocomplete: 'current-password',
-                           class: 'form-control',
-                           required: true,
-                           minlength: @minimum_password_length,
-                           maxlength: '30' %>
+  <div class="field">
+    <%= f.label :password_confirmation %><br />
+    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+  </div>
 
-<<<<<<< HEAD
   <div class="actions">
-    <%= f.submit t('.sign_up') %>
+    <%= f.submit "登録" %>
   </div>
 <% end %>
-=======
-      <% if @minimum_password_length %>
-        <small class="form-text text-muted"><%= t('devise.shared.minimum_password_length', count: @minimum_password_length) %></small>
-      <% end %>
-    </div>
 
-    <div class="form-group">
-      <%= f.label :password_confirmation %>
-      <%= f.password_field :password_confirmation,
-                           autocomplete: 'current-password',
-                           class: 'form-control',
-                           required: true,
-                           minlength: @minimum_password_length,
-                           maxlength: '30' %>
-    </div>
-
-    <div class="form-group">
-      <%= f.submit t('.sign_up'), class: 'btn btn-primary' %>
-    </div>
-  <% end %>
->>>>>>> 4a42badc885ba6d8b63d05fae30848233474b018
-
-  <%= render 'devise/shared/links' %>
+<%= render "devise/shared/links" %>
 </div>
