--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -2,9 +2,12 @@
     <div id="Navber">
       <ul class="navbar-nav">
         <% if user_signed_in? %>
-        
+
           <li class="nav-item active">
             <%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: 'nav-link' %>
+          </li>
+          <li class="nav-item active">
+            <%= link_to "マイページへ", user_path(current_user.id), class: 'nav-link' %>
           </li>
       　<% else %>
 
