--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -19,4 +19,13 @@
                     <% end %>
                 </div>
                 <% end %>
-            </div>
+
+                <% if !post.like_users.include?(current_user) %>
+                  <%= link_to likes_path(post_id: post.id), method: :post do %>
+                    <i class="far fa-heart like-btn" ></i>
+                <% end %>
+                <% else %>
+                   <%= link_to likes_path(post_id: post.id), method: :delete do %>
+                     <i class="far fa-heart unlike-btn"></i>
+                <% end %>
+                <% end %>
