--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -14,6 +14,19 @@
             <p><%= link_to(post.park,"/posts/#{post.id}") %></p>
             <p><%= post.access %></p>
           </div>
+
+          <div class="like-left">
+             <% if !post.like_users.include?(current_user) %>
+                <%= link_to likes_path(post_id: post.id), method: :post do %>
+                  <i class="far fa-heart like-btn" ></i>
+                <% end %>
+              <% else %>
+                 <%= link_to likes_path(post_id: post.id), method: :delete do %>
+                    <i class="far fa-heart unlike-btn"></i>
+                 <% end %>
+               <% end %>
+          </div>
+
         </div>
         </div>
             <% end %>
