posts/showにもいいね機能

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -26,6 +26,7 @@
                  <i class="far fa-heart unlike-btn"></i>
               <% end %>
             <% end %>
+            <%= post.like_users.count %>
           </div>
 
          <% end %>
