--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -18,6 +18,19 @@
       <p><%= @post.access %></p>
   </div>
 
+  <div class="like-left">
+    <% if !@post.like_users.include?(current_user) %>
+      <%= link_to likes_path(post_id: post.id), method: :post do %>
+        <i class="far fa-heart like-btn" ></i>
+      <% end %>
+     <% else %>
+       <%= link_to likes_path(post_id: @post.id), method: :delete do %>
+         <i class="far fa-heart unlike-btn"></i>
+       <% end %>
+     <% end %>
+     <%= @post.like_users.count %>
+   </div>
+
    <div class="ml-auto posts_button">
      <a class="btn btn-outline-info" href="/posts" role="button">公園一覧へ</a>
    </div>
