--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -20,7 +20,7 @@
 
   <div class="like-left">
     <% if !@post.like_users.include?(current_user) %>
-      <%= link_to likes_path(post_id: post.id), method: :post do %>
+      <%= link_to likes_path(post_id: @post.id), method: :post do %>
         <i class="far fa-heart like-btn" ></i>
       <% end %>
      <% else %>
