コメントリストファイル

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -32,18 +32,18 @@
      <%= @post.like_users.count %>
    </div>
 
-   <%= form_for [@post, @comment], method: :post do |f| %>
-     <%= f.text_field :comment %>
-     <br>
-     <%= f.submit 'レビューする' %>
-   <% end %>
-  <br>
-
- <p>口コミ一覧</p>
-   <% @comments.each do |c| %>
-       <%= c.comment %>
-       <hr>
-   <% end %>
+   <div id="comment-post-<%= @post.id.to_s %>">
+     <%= render 'comment_list', { post: @post } %>
+   </div>
+  
+    <hr>
+    <div class="row actions" id="comment-form-post-<%= @post.id.to_s %>">
+      <%= form_with model: [@post, Comment.new], class: "w-100" do |f| %>
+        <%= f.hidden_field :user_id, value: current_user.id %>
+        <%= f.hidden_field :post_id, value: @post.id %>
+        <%= f.text_field :comment, class: "form-control comment-input border-0", placeholder: "コメント ...", autocomplete: :off %>
+      <% end %>
+    </div>
 
 
    <div class="ml-auto posts_button">
