--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -23,6 +23,7 @@
 .main-contents{
   border: 1px solid gray;
   margin-top: 20px;
+  background: #FFFFFF
 }
 
 .main-image img{
@@ -46,6 +47,7 @@
   margin: 0 auto;
   padding: 20px;
   border: 1px solid gray;
+  background: #FFFFFF
 }
 
 .show-image{
