--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,4 +1,6 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<header>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <%= link_to "Little Park", root_path, class: 'navbar-brand' %>
     <div id="Navber">
       <ul class="navbar-nav">
         <% if user_signed_in? %>
@@ -21,3 +23,4 @@
       </ul>
     </div>
   </nav>
+</header>
