--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,5 +1,8 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div id="Navber">
+<header>
+</header>
+  <nav class="navbar navbar-expand navbar-light">
+   <%= link_to "Little Park", root_path, class: 'navbar-brand' %>
+   <div id="Navber">
       <ul class="navbar-nav">
         <% if user_signed_in? %>
 
