ハッシュダグ未完

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -13,6 +13,7 @@
           <div class="park">
             <p><%= link_to(post.park,"/posts/#{post.id}") %></p>
             <p><%= post.access %></p>
+            <p><%= render_with_hashtags(post.hashbody) %></p>
           </div>
          </div>
 
