--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -23,6 +23,11 @@
   </div>
 
   <div class="form-group">
+    <p>ハッシュタグ入力欄</p>
+    <%= f.text_area :hashbody, size:"55x3" %>
+  </div>
+
+  <div class="form-group">
       <%= f.label :outline, '概要' %>
       <%= f.text_field :outline, class: 'form-control' %>
       <small id="feature-tip" class="form-text text-muted">
