--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -13,6 +13,8 @@
             <div class="park">
               <p><%= link_to(post.park,"/posts/#{post.id}") %></p>
               <p><%= post.access %></p>
+              <%= render_with_hashtags(post.hashbody) %>
+
             </div>
           </div>
 
@@ -29,7 +31,7 @@
             <%= post.like_users.count %>
           </div>
 
-      <% end %>
+       <% end %>
       </div>
     </div>
     <% end %>
