--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,12 +1,13 @@
 <div class="d-flex align-items-center">
   <h1>投稿</h1>
-  <div class="ml-auto posts_button">
-    <%= link_to '投稿一覧', posts_path, class: 'btn btn-outline-info' %>
+    <div class="ml-auto posts_button">
+      <%= link_to '投稿一覧', posts_path, class: 'btn btn-outline-info' %>
+    </div>
 </div>
-  </div>
-</div>
-<%= form_for @post do |f| %>
-  <div class="form-group">
+
+
+  <%= form_for @post do |f| %>
+    <div class="form-group">
       <%= f.label :park, 'イメージ' %>
       <%= f.file_field :image, class: 'form-control' %>
       <small id="park-tip" class="form-text text-muted">
@@ -20,39 +21,43 @@
       <small id="park-tip" class="form-text text-muted">
           公園を入力してください。
       </small>
-  </div>
+    </div>
 
-  <div class="form-group">
-    <p>ハッシュタグ入力欄</p>
-    <%= f.text_area :hashbody, size:"55x3" %>
-  </div>
-
-  <div class="form-group">
-      <%= f.label :outline, '概要' %>
-      <%= f.text_field :outline, class: 'form-control' %>
-      <small id="feature-tip" class="form-text text-muted">
-          公園の概要を入力してください。
+    <div class="form-group">
+      <%= f.label :hashbody, 'ハッシュダグ' %>
+      <%= f.text_field :hashbody, class: 'form-control' %>
+      <small id="hashbody-tip" class="form-text text-muted">
+         ハッシュダグを入力してください。
       </small>
-  </div>
+    </div>
 
-  <div class="form-group">
+    <div class="form-group">
+       <%= f.label :outline, '概要' %>
+       <%= f.text_field :outline, class: 'form-control' %>
+       <small id="feature-tip" class="form-text text-muted">
+          公園の概要を入力してください。
+       </small>
+    </div>
+
+    <div class="form-group">
       <%= f.label :location, '公園の所在地' %>
       <%= f.text_field :location, class: 'form-control' %>
       <small id="location-tip" class="form-text text-muted">
           公園の所在地を入力してください。
       </small>
-  </div>
+    </div>
 
-  <div class="form-group">
+    <div class="form-group">
       <%= f.label :access, '交通アクセス' %>
       <%= f.text_field :access, class: 'form-control' %>
-        <small id="access-tip" class="form-text text-muted">
-            最寄駅または、最寄りのバス停を入力してください。
-        </small>
-  </div>
-
-  <%= f.submit '投稿', class: 'btn btn-info btn-block' %>
-  <small id="submit-tip" class="form-text text-muted">
-      投稿する前に投稿内容を見直してください!
-  </small>
-<% end %>
+      <small id="access-tip" class="form-text text-muted">
+        最寄駅または、最寄りのバス停を入力してください。
+      </small>
+    </div>
+    <div class="form-group">
+      <%= f.submit '投稿', class: 'btn btn-info btn-block' %>
+      <small id="submit-tip" class="form-text text-muted">
+        投稿する前に投稿内容を見直してください!
+       </small>
+     </div>
+  <% end %>
