--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -38,19 +38,27 @@
 }
 
 //header
-header {
-  height: 300px;
+*{
+   margin: 0;
+   padding: 0;
+   }
+
+   header {
+  background-size: cover;
+  height: 200px;
   width: 100%;
   padding: 15px 0;
   background-color: #FFFFFF;
-  background-image: url("little_park.jpg");
+  background-image: url("header.jpg");
   background-position: center top;
   background-size: cover;
   opacity: 0.5;
   color: white;
 }
 
-
+nav {
+  background-color: #99FF99
+}
 
 body {
   background-color: #CCFFFF
