--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,34 +2,26 @@
 
 <div class="container">
   <div class="row">
-     <% @posts.each do |post| %>
-     <div class="col-md-4 col-sm-6 col-xs-12">
+    <% @posts.each do |post| %>
+      <div class="col-md-4 col-sm-6 col-xs-12">
         <%= link_to("/posts/#{post.id}") do %>
         <div class="main-contents">
           <div class="main-image">
             <%= image_tag post.image_url(:thumb) if post.image.present? %>
           </div>
+
           <div class="content-wrapper">
             <div class="park">
               <p><%= link_to(post.park,"/posts/#{post.id}") %></p>
               <p><%= post.access %></p>
               <%= render_with_hashtags(post.hashbody) %>
-
             </div>
           </div>
 
-         <div class="like-left">
-            <% if !post.like_users.include?(current_user) %>
-              <%= link_to likes_path(post_id: post.id), method: :post do %>
-                <i class="far fa-heart like-btn" ></i>
-              <% end %>
-            <% else %>
-              <%= link_to likes_path(post_id: post.id), method: :delete do %>
-                 <i class="far fa-heart unlike-btn"></i>
-              <% end %>
-            <% end %>
-            <%= post.like_users.count %>
+          <div id="likes_buttons_<%= post.id %>">
+            <%= render partial: 'likes/like', locals: { post: post, likes: @likes} %>
           </div>
+
 
        <% end %>
       </div>
