--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -19,33 +19,44 @@
       <p><%= @post.access %></p>
   </div>
 
-  <div class="like-left">
-    <% if !@post.like_users.include?(current_user) %>
-      <%= link_to likes_path(post_id: @post.id), method: :post do %>
-        <i class="far fa-heart like-btn" ></i>
+
+    <% unless @post.like_user(current_user.id).blank? %>
+      <%= link_to post_like_path(post_id: @post.id ,id: @post.likes[0].id), method: :delete, remote: true do %>
+        <div class="vertical_like">
+          <i class="material-icons red-text">favorite</i>
+          <span class="red-text">
+            <%= @post.like_users.count %>
+          </span>
+        </div>
       <% end %>
-     <% else %>
-       <%= link_to likes_path(post_id: @post.id), method: :delete do %>
-         <i class="far fa-heart unlike-btn"></i>
-       <% end %>
-     <% end %>
-     <%= @post.like_users.count %>
-   </div>
-
-   <div id="comment-post-<%= @post.id.to_s %>">
-     <%= render 'comment_list', { post: @post } %>
-   </div>
-
-    <hr>
-    <div class="row actions" id="comment-form-post-<%= @post.id.to_s %>">
-      <%= form_with model: [@post, Comment.new], class: "w-100" do |f| %>
-        <%= f.hidden_field :user_id, value: current_user.id %>
-        <%= f.hidden_field :post_id, value: @post.id %>
-        <%= f.text_field :comment, class: "form-control comment-input border-0", placeholder: "コメント ...", autocomplete: :off %>
+    <% else %>
+      <%= link_to post_likes_path(@post.id), method: :post, remote: true do %>
+        <div class="vertical_like">
+          <i class="material-icons grey-text text-darken-2">favorite_border</i>
+          <span class="grey-text text-darken-2">
+            <%= @post.like_users.count %>
+           </span>
+          </div>
+        <% end %>
       <% end %>
-    </div>
 
 
+
+  <div id="comment-post-<%= @post.id.to_s %>">
+    <%= render 'comment_list', { post: @post } %>
+  </div>
+    <%= link_to time_ago_in_words(@post.created_at).upcase + "前", post_path(@post),
+      class: "light-color post-time no-text-decoration" %>
+  <hr>
+  <div class="row actions" id="comment-form-post-<%= @post.id.to_s %>">
+    <%= form_with model: [@post, Comment.new], class: "w-100" do |f| %>
+      <%= f.hidden_field :user_id, value: current_user.id %>
+      <%= f.hidden_field :post_id, value: @post.id %>
+      <%= f.text_field :comment, class: "form-control comment-input border-0", placeholder: "コメント ...", autocomplete: :off %>
+    <% end %>
+  </div>
+
+   <br>
    <div class="ml-auto posts_button">
      <a class="btn btn-outline-info" href="/posts" role="button">公園一覧へ</a>
    </div>
