margin_to_posts/css

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -17,10 +17,11 @@
               <%= render_with_hashtags(post.hashbody) %>
             </div>
           </div>
-
-          <div id="likes_buttons_<%= post.id %>">
-            <%= render partial: 'likes/like', locals: { post: post, likes: @likes} %>
-          </div>
+             <div class="likes-mark">
+               <div id="likes_buttons_<%= post.id %>">
+                 <%= render partial: 'likes/like', locals: { post: post, likes: @likes} %>
+               </div>
+             </div>
 
 
        <% end %>
