--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -57,9 +57,9 @@
 }
 
 nav {
-  background-color: #99FF99
+  background-color: #99FF99;
 }
 
 body {
-  background-color: #CCFFFF
+  background-color: #CCFFFF;
 }
