--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -69,21 +69,8 @@
   margin-top: 10px;
 }
 
-.btn-stitch {
-  display: inline-block;
-  padding: 0.5em 1em;
-  text-decoration: none;
-  background: #668ad8;
-  color: #FFF;
-  border-radius: 4px;
-  box-shadow: 0px 0px 0px 5px #668ad8;
-  border: dashed 1px #FFF;
-  margin: 20px 0;
-  width: 70%;
-}
-
-.btn-stitch:hover {
-  border: dotted 1px #FFF;
+.posts-mark {
+  margin: 0px 0px 15px 15px;
 }
 
 .delete-comment {
@@ -96,6 +83,9 @@
   background-size: 11px !important;
 }
 
-.likes-mark {
-  margin: 0px 0px 15px 15px;
+
+.btn-stitch {
+  display: inline-block;
+  padding: 0.5em 1em;
+  text-decoration: none;
 }
