googlemap_to_posts/show

--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -62,6 +62,12 @@
 margin: auto auto 15px auto;
 }
 
+iframe {
+  margin-left: 30px;
+  width: 500px;
+  height: 300px;
+}
+
 
 .park{
   margin-top: 10px;
