--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -19,6 +19,10 @@
       <p><%= @post.access %></p>
   </div>
 
+  <div class="map">
+    <iframe src="https://maps.google.co.jp/maps?output=embed&q=<%= @post.location %>"></iframe>
+  </div>
+
   <div id="likes_buttons_<%= @post.id %>">
     <% unless @post.like_user(current_user.id).blank? %>
       <%= link_to post_like_path(post_id: @post.id ,id: @post.likes[0].id), method: :delete, remote: true do %>
