--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -19,27 +19,45 @@
       <p><%= @post.access %></p>
   </div>
 
-  <div class="map">
-    <iframe src="https://maps.google.co.jp/maps?output=embed&q=<%= @post.location %>"></iframe>
-  </div>
-
-  <h2>gmap</h2>
-
-<!-- 地名入力用のinputを追加 -->
-<input id="address" type="textbox" value="Sydney, NSW">
-
-<!-- buttonをクリックしたらcodeAddressを実行　-->
-<input type="button" value="Encode" onclick="codeAddress()">
-<div id='map'>
-</div>
-
-<iframe
-  width="600"
-  height="450"
-  frameborder="0" style="border:0"
-  src="https://www.google.com/maps/embed/v1/search?key=AIzaSyDtWJ1SNDv5ihQnErxLwbgiHyflWaUvX34
-    &q=<% @post.location %>" allowfullscreen>
-</iframe>
+  <p>公園の場所</p>
+     <input id="address" type="textbox" value="<%= @post.location %>">
+     <input type="button" value="クリックして地図で見る" onclick="codeAddress()">
+     <div id='map'></div>
+     <style>
+       #map {
+       height: 400px;
+       width: 500px;
+       margin-left: 30px;
+      }
+     </style>
+     <script>
+     let map
+     function initMap(){
+         geocoder = new google.maps.Geocoder()
+         map = new google.maps.Map(document.getElementById('map'), {
+             zoom: 12,
+         });
+         marker = new google.maps.Marker({
+             map: map
+         });
+     }
+     let geocoder
+     function codeAddress(){
+         let inputAddress = document.getElementById('address').value;
+         geocoder.geocode( { 'address': inputAddress}, function(results, status) {
+             if (status == 'OK') {
+                 map.setCenter(results[0].geometry.location);
+                 var marker = new google.maps.Marker({
+                     map: map,
+                     position: results[0].geometry.location
+                 });
+             } else {
+                 alert('該当する結果がありませんでした：' + status);
+             }
+         });
+     }
+  </script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDtWJ1SNDv5ihQnErxLwbgiHyflWaUvX34&callback=initMap"></script>
 
 
   <div id="likes_buttons_<%= @post.id %>">
