--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,4 +1,6 @@
 <%= render 'shared/flash_messages' %>
+ <br>
+<iframe src="https://www.google.com/maps/d/embed?mid=19AFTeknmIahUpgetKNOFbHfPjDuoeEoV" width="640" height="480"></iframe>
 
 <div class="container">
   <div class="row">
