--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,6 +1,12 @@
 <%= render 'shared/flash_messages' %>
  <br>
- <%= render "shared/search_park" %>
+<%= render "shared/search_park" %>
+
+<div class="col-xs-12">
+  <% @tags.each do |tag| %>
+     <%= link_to "#{tag.name}(#{tag.taggings_count})", tag_path(tag.name), class: "label label-default" %>
+  <% end %>
+</div>
 
 <div class="my-map">
   <iframe src="https://www.google.com/maps/d/embed?mid=19AFTeknmIahUpgetKNOFbHfPjDuoeEoV" width="800" height="480"></iframe>
@@ -21,6 +27,7 @@
               <p><%= link_to(post.park,"/posts/#{post.id}") %></p>
               <p><%= post.access %></p>
               <%= render_with_hashtags(post.hashbody) %>
+              <%= raw(post.tag_list.map { |t| link_to t, tag_path(t) }.join(' ')) %>
             </div>
           </div>
 
