--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -27,7 +27,15 @@
       <%= f.label :hashbody, 'ハッシュダグ' %>
       <%= f.text_field :hashbody, class: 'form-control' %>
       <small id="hashbody-tip" class="form-text text-muted">
-         ハッシュダグを入力してください。
+          ハッシュダグを入力してください。
+      </small>
+    </div>
+
+    <div class="form-group">
+      <%= f.label :tag_list, 'タグをカンマ区切りで入力' %>
+      <%= text_field_tag 'post[tag_list]', @post.tag_list.join(","), :class => "form-control" %>
+      <small id="tag-tip" class="form-text text-muted">
+         ダグを入力してください。
       </small>
     </div>
 
