--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -1,15 +1,3 @@
-.posts_button {
-    a {
-        margin: 0 8px;
-    }
-}
-
-.posts_table {
-    tr:hover {
-        cursor: pointer;
-    }
-}
-
 /* index */
 .thumbnail {
   float: left;
@@ -19,9 +7,6 @@
 }
 
 //indexのsearch機能
-placeholder {
-
-}
 
 .hidden {
   display: none;
@@ -31,10 +16,6 @@ form.search-form {
   padding: 20px 0px 10px 0px;
   position: relative;
   max-width: 350px;
-}
-
-form.aria-label {
-
 }
 
   i.search-icon {
@@ -76,11 +57,6 @@ form.aria-label {
   overflow:hidden;
   border-radius: 10%;
 }
-
-.content {
-  border-radius: 10%;
-}
-
 
 .prak{
   margin: 10px 0;
@@ -131,13 +107,7 @@ iframe {
 }
 
 
-.btn-stitch {
-  display: inline-block;
-  padding: 0.5em 1em;
-  text-decoration: none;
-}
-
 .click
 {
-  color: blue;
+  color: pink;
 }
