--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,3 +1,3 @@
 <footer>
-  <div class="text-center text-muted">© <%= Date.today.year %> Seki Shinya </div>
+  <div class="text-center text-muted"> <%= Date.today.year %> ©Seki Shinya </div>
 </footer>
