--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,26 +1,28 @@
 <header>
+  <div class="header-logo">
+    <%= link_to "Little Park", root_path %>
+  </div>
+  <ul class="header-menus">
+    <% if user_signed_in? %>
+      <li>
+        <%= link_to "公園一覧", root_path %>
+      </li>
+      <li class="nav-item active">
+        <%= link_to "マイページへ", user_path(current_user.id) %>
+      </li>
+      <li>
+        <%= link_to 'ログアウト', destroy_user_session_path, method: :delete %>
+      </li>
+     <% else %>
+       <li>
+         <%= link_to "公園一覧", root_path %>
+       </li>
+       <li>
+         <%= link_to "新規登録", new_user_registration_path %>
+       </li>
+       <li>
+         <%= link_to "ログイン", new_user_session_path %>
+       </li>
+    <% end %>
+  </ul>
 </header>
-  <nav class="navbar navbar-expand navbar-light">
-   <%= link_to "Little Park", root_path, class: 'navbar-brand' %>
-   <div id="Navber">
-      <ul class="navbar-nav">
-        <% if user_signed_in? %>
-
-          <li class="nav-item active">
-            <%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: 'nav-link' %>
-          </li>
-          <li class="nav-item active">
-            <%= link_to "マイページへ", user_path(current_user.id), class: 'nav-link' %>
-          </li>
-       <% else %>
-
-          <li class="nav-item active">
-            <%= link_to "新規登録", new_user_registration_path, class: 'nav-link' %>
-          </li>
-          <li class="nav-item active">
-            <%= link_to "ログイン", new_user_session_path, class: 'nav-link' %>
-          </li>
-        <% end %>
-      </ul>
-    </div>
-  </nav>
