--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,7 @@
-<div class="container">
+<div class="show-container">
   <h1>マイページ</h1>
   <h3><%= @user.name %></h3>
-  <div class="user">
+  <div class="user-image">
     <%= image_tag @user.image_name.to_s  %>
  </div>
   <hr>
