--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,6 +1,9 @@
-.user img {
+/*show*/
+
+.user-image {
   width: 50px;
-    height: 50px;
-    border-radius: 40%;
-    box-shadow: 0 2px 6px #c1ced7;
+  height: 50px;
+  border-radius: 40%;
+  box-shadow: 0 2px 6px #c1ced7;
+  object-fit: cover;
 }
