--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,15 +1,16 @@
 <%= render 'shared/flash_messages' %>
- <br>
 <%= render "shared/search_park" %>
 
-<div class="col-xs-12">
-  <% @tags.each do |tag| %>
-     <%= link_to "#{tag.name}(#{tag.taggings_count})", tag_path(tag.name), class: "label label-default" %>
-  <% end %>
-</div>
-
-<div class="my-map">
-  <iframe src="https://www.google.com/maps/d/embed?mid=19AFTeknmIahUpgetKNOFbHfPjDuoeEoV" width="800" height="480"></iframe>
+<div class="identify">
+  <div class="tags">
+    <% @tags.each do |tag| %>
+       <%= link_to "#{tag.name}(#{tag.taggings_count})", tag_path(tag.name), class: "label label-default" %>
+    <% end %>
+  </div>
+  <br>
+  <div class="my-map">
+    <iframe src="https://www.google.com/maps/d/embed?mid=19AFTeknmIahUpgetKNOFbHfPjDuoeEoV&z=13" width="800" height="480"></iframe>
+  </div>
 </div>
 
 <div class="container">
@@ -26,8 +27,7 @@
             <div class="park">
               <p><%= link_to(post.park,"/posts/#{post.id}") %></p>
               <p><%= post.access %></p>
-              <%= render_with_hashtags(post.hashbody) %>
-              <%= raw(post.tag_list.map { |t| link_to t, tag_path(t) }.join(' ')) %>
+              <p><%= raw(post.tag_list.map { |t| link_to t, tag_path(t) }.join(' ')) %></p>
             </div>
           </div>
 
