--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -29,8 +29,7 @@ header {
   padding: 15px 0;
   background-image: url("header3.jpg");
   background-position: center top;
-  background-size: cover;
-  opacity: 0.5;
+  color: #FFCCFF
 }
 
 .header-logo {
