--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,17 +1,15 @@
 <%= render 'shared/flash_messages' %>
 <%= render "shared/search_park" %>
-
-<div class="identify">
-  <div class="tags">
+  <br>
+  <div class="tags-index">
     <% @tags.each do |tag| %>
        <%= link_to "#{tag.name}(#{tag.taggings_count})", tag_path(tag.name), class: "label label-default" %>
     <% end %>
   </div>
   <br>
-  <div class="my-map">
+  <div class="map-index">
     <iframe src="https://www.google.com/maps/d/embed?mid=19AFTeknmIahUpgetKNOFbHfPjDuoeEoV&z=13" width="800" height="480"></iframe>
   </div>
-</div>
 
 <div class="container">
   <div class="row">
