--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,15 +1,8 @@
 <%= render 'shared/flash_messages' %>
+ <br>
 <%= render "shared/search_park" %>
-  <br>
-  <div class="tags-index">
-    <% @tags.each do |tag| %>
-       <%= link_to "#{tag.name}(#{tag.taggings_count})", tag_path(tag.name), class: "label label-default" %>
-    <% end %>
-  </div>
-  <br>
-  <div class="map-index">
-    <iframe src="https://www.google.com/maps/d/embed?mid=19AFTeknmIahUpgetKNOFbHfPjDuoeEoV&z=13" width="800" height="480"></iframe>
-  </div>
+
+<%= link_to "公園一覧", root_path %>
 
 <div class="container">
   <div class="row">
@@ -25,17 +18,15 @@
             <div class="park">
               <p><%= link_to(post.park,"/posts/#{post.id}") %></p>
               <p><%= post.access %></p>
-              <p><%= raw(post.tag_list.map { |t| link_to t, tag_path(t) }.join(' ')) %></p>
+              <%= raw(post.tag_list.map { |t| link_to t, tag_path(t) }.join(' ')) %>
             </div>
           </div>
-
 
           <div class="posts-mark">
             <div id="likes_buttons_<%= post.id %>">
               <%= render partial: 'likes/like', locals: { post: post, likes: @likes} %>
             </div>
           </div>
-
 
         <% end %>
         </div>
