csvインポート

--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -1,15 +1,3 @@
-.posts_button {
-    a {
-        margin: 0 8px;
-    }
-}
-
-.posts_table {
-    tr:hover {
-        cursor: pointer;
-    }
-}
-
 /* index */
 .thumbnail {
   float: left;
@@ -86,7 +74,7 @@ form.aria-label {
   margin: 10px 0;
 }
 
-.my-map {
+.map-index {
   margin-left: 738px;
 }
 
