--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,12 +2,19 @@
  <br>
 <%= render "shared/search_park" %>
 
-<%= link_to "公園一覧", root_path %>
+<div class="tag-index">
+  <% @tags.each do |tag| %>
+     <%= link_to "#{tag.name}(#{tag.taggings_count})", tag_path(tag.name), class: "label label-default" %>
+  <% end %>
+</div>
+<div class="map-index">
+  <iframe src="https://www.google.com/maps/d/embed?mid=19AFTeknmIahUpgetKNOFbHfPjDuoeEoV&z=12" width="800" height="480"></iframe>
+</div>
 
 <div class="container">
   <div class="row">
     <% @posts.each do |post| %>
-      <div class="col-md-4 col-sm-6 col-xs-12">
+      <div class="col-md-3 col-sm-6 col-xs-12">
         <%= link_to("/posts/#{post.id}") do %>
         <div class="main-contents">
           <div class="main-image">
