--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -149,7 +149,7 @@ form.aria-label {
   background: #FFFFFF
 }
 
-.show-image{
+.post-show-image {
   text-align: center;
   width: 60%;
   margin: auto auto 15px auto;
