--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -86,8 +86,13 @@ form.aria-label {
   background: linear-gradient(to right, #00FF00 0%, #00FF00 50%, #009900 50%, #009900 0%);
   margin: 0 auto;
   width: 300px;
-  height: 60px;
+  height: 40px;
   border-radius: 40px;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
 }
 
 .modal-involve a {
@@ -104,7 +109,7 @@ form.aria-label {
 }
 
 .modal__bg{
-   background: rgba(0,0,0,0.1);
+   background: rgba(0,0,0,0.3);
     height: 100vh;
     position: absolute;
     width: 100%;
@@ -118,18 +123,6 @@ form.aria-label {
     width: 60%;
 }
 
-.modal-involve {
-  position: relative;
-  display: flex;
-   justify-content: center;
-   align-items: center;
-   width: 300px;
-   height: 20px;
-   background-color: #99FF99;
-   transition: background-color .2s ease-in-out;
-   cursor: pointer;
-}
-
 .js-modal-open span{
   color: #fff;
   font-size: 13px;
@@ -140,15 +133,28 @@ form.aria-label {
   margin-bottom: -5px;
 }
 
+
 /*show*/
-.user-show-image img {
+.post-show{
+  max-width: 600px;
+  margin: 0 auto;
+  padding: 20px;
+  border: 1px solid gray;
+  background: #FFFFFF
+}
+
+.post-show-image{
   text-align: center;
-  width: 80px;
-  height: 80px;
-  border-radius: 40%;
-  box-shadow: 0 2px 6px #c1ced7;
-  margin: 20px 0 10px;
-  object-fit: cover;
+  width: 400px;
+  height: 300px;
+  margin: auto auto 15px auto;
+}
+
+
+.show-image {
+  text-align: center;
+  width: 60%;
+  margin: auto auto 15px auto;
 }
 
 .user-content {
