--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,12 +1,11 @@
-<div class="show container">
+<div class="post-show">
 
   <div class="show-park">
     <p><%= @post.park %></p>
   </div>
-  <div class="user-show-image">
+  <div class="post-show-image">
     <%= image_tag @post.image_url(:thumb) if @post.image.present? %>
   </div>
-
   <div class="show-outline">
     <p><%= @post.outline %></p>
   </div>
@@ -74,7 +73,7 @@
     <%= form_with model: [@post, Comment.new], class: "w-100" do |f| %>
       <%= f.hidden_field :user_id, value: current_user.id %>
       <%= f.hidden_field :post_id, value: @post.id %>
-      <%= f.text_field :comment, class: "form-control comment-input border-0", placeholder: "コメント ...", autocomplete: :off %>
+      <%= f.text_field :comment, class: "form-control comment-input border-0", placeholder: "レビュー ...", autocomplete: :off %>
     <% end %>
   </div>
 
