--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,8 @@
 <div class="user-show">
-      <div class="show-image">
-        <%= image_tag @user.image_name.to_s, :size => "100x100" %>
+      <div class="user-show-image">
+        <%= image_tag @user.image_name.to_s %>
       </div>
+      <br>
       <div class="user-content">
         <h3><%= @user.name %></h3>
         <p><%= @user.email %></p>
