--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,5 @@
 <div class="user-show">
-      <div class="show-image">
+      <div class="user-show-image">
         <%= image_tag @user.image_name.to_s, :size => "100x100" %>
       </div>
       <div class="user-content">
