user-post-show修正

--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -6,6 +6,20 @@
   height: 200px;
 }
 
+.posts-mark {
+  display: flex;
+}
+
+.comment-list span {
+
+}
+
+.comment-count {
+  position:relative;
+  width: 10px;
+  top: 7px;
+}
+
 //indexのsearch機能
 placeholder {
 
