--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -27,6 +27,7 @@
        margin-left: 55px;
        height: 300px;
        width: 450px;
+       background-color: white;
       }
      </style>
      <script>
