--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,6 @@
 <div class="user-show">
       <div class="user-show-image">
-        <%= image_tag @user.image_name.to_s, :size => "100x100" %>
+        <%= image_tag @user.image_name.to_s %>
       </div>
       <div class="user-content">
         <h3><%= @user.name %></h3>
