--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,4 +1,3 @@
-
 @import "bootstrap/scss/bootstrap";
 @import "posts";
 @import "users";
@@ -75,4 +74,5 @@ body {
 footer {
   background-color: #99FF99;
   color: white;
+  width: 100%;
 }
