--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -7,7 +7,10 @@
       <li>
         <%= link_to "公園一覧", root_path %>
       </li>
-      <li class="nav-item active">
+      <li>
+        <%= link_to("ユーザー一覧", "/users/index") %>
+      </li>
+      <li>
         <%= link_to "マイページへ", user_path(current_user.id) %>
       </li>
       <li>
@@ -16,6 +19,9 @@
      <% else %>
        <li>
          <%= link_to "公園一覧", root_path %>
+       </li>
+       <li>
+            <%= link_to("ユーザー一覧", "/users/index") %>
        </li>
        <li>
          <%= link_to "新規登録", new_user_registration_path %>
