--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,18 +1,14 @@
-<div class="main users-index">
-  <div class="container">
-    <h1 class="users-heading">ユーザー一覧</h1>
+<div class="main-users-index">
+    <h3 class="users-heading">ユーザー一覧</h3>
 
     <% @users.each do |user| %>
       <div class="users-index-item">
-
         <div class="user-left">
           <%= image_tag user.image_name.to_s, :size => "60x60" %>
-        </div>
-
         </div>
         <div class="user-right">
           <%= link_to(user.name, "/users/#{user.id}") %>
         </div>
-     <% end %>
-  </div>
+      </div>
+    <% end %>
 </div>
