--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,6 +8,12 @@
         <p><%= @user.email %></p>
         <%= link_to "プロフィールを編集", edit_user_registration_path, class: "btn btn-outline-info" %>
       </div>
+
+      <ul class="user-tabs">
+        <li class="active"><%= link_to("投稿", "/users/#{@user.id}") %></li>
+        <li><%= link_to("いいね!", "/users/#{@user.id}/likes") %></li>
+      </ul>
+
 </div>
 
 <br>
