--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -8,7 +8,7 @@
         <%= link_to "公園一覧", root_path %>
       </li>
       <li>
-        <%= link_to("ユーザー一覧", "/users/index") %>
+        <%= link_to("ユーザー一覧", "/users") %>
       </li>
       <li>
         <%= link_to "マイページへ", user_path(current_user.id) %>
@@ -21,7 +21,7 @@
          <%= link_to "公園一覧", root_path %>
        </li>
        <li>
-            <%= link_to("ユーザー一覧", "/users/index") %>
+            <%= link_to("ユーザー一覧", "/users") %>
        </li>
        <li>
          <%= link_to "新規登録", new_user_registration_path %>
