--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,3 +1,46 @@
+/*index*/
+.users-heading {
+  font-weight: 200px;
+  margin: 60px 0 20px;
+  font-size: 30px;
+  color: #bcc8d4;
+}
+
+.main-users-index {
+  margin-bottom: 30px;
+}
+
+.users-index-item {
+  padding: 20px 30px;
+  background-color: white;
+  overflow: hidden;
+  box-shadow: 0 2px 6px #c1ced7;
+  display: table;
+  width: 100%;
+}
+
+.user-left img {
+  width: 50px;
+  height: 50px;
+  border-radius: 40%;
+  box-shadow: 0 2px 6px #c1ced7;
+  object-fit: cover;
+}
+
+.user-left {
+  width: 10%;
+}
+
+.user-right {
+  display: flex;
+  width: 90%;
+  padding-left: 25px;
+  text-align: left;
+  display: table-cell;
+  vertical-align: middle;
+}
+
+
 /*show*/
 
 .user-show-image img {
