--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -7,6 +7,9 @@
       <li>
         <%= link_to "公園一覧", root_path %>
       </li>
+      <li>
+        <%= link_to("ユーザー一覧", "/users") %>
+      </li>
       <li class="nav-item active">
         <%= link_to "マイページへ", user_path(current_user.id) %>
       </li>
