--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -40,6 +40,10 @@
   vertical-align: middle;
 }
 
+.user-content {
+  text-align: center;
+}
+
 
 /*show*/
 
@@ -52,13 +56,23 @@
   box-shadow: 0 2px 6px #c1ced7;
 }
 
-.user-content {
-  text-align: center;
+.post-user-image img {
+  width: 80px;
+  height: 80px;
+  border-radius: 40%;
+  box-shadow: 0 2px 6px #c1ced7;
+  margin: 20px 0 10px;
+  object-fit: cover;
 }
+
+.posts-index-item {
+  background-color: white;
+  padding-left: 20px;
+}
+
 
 .user-tabs {
   margin-top: 40px;
-  margin-left: auto;
   background-color: white;
   overflow: hidden;
   box-shadow: 0 2px 6px #c1ced7;
@@ -80,15 +94,6 @@
   display: inline-block;
   padding: 16px 30px;
   color: #afb6bf;
-}
-
-.post-left img {
-  display: block;
-  margin: 20px auto;
-  width: 80px;
-  height: 80px;
-  border-radius: 40%;
-  box-shadow: 0 2px 6px #c1ced7;
 }
 
 /*ログイン画面*/
