--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -10,10 +10,18 @@
   display: flex;
 }
 
-.comment-list span {
- display: inline-block;
- text-decoration: none;
+a:hover {
+  display: inline-block;
+  text-decoration: none;
+  color: #FF99CC;
 }
+
+.modal-involve :hover {
+  display: inline-block;
+  text-decoration: none;
+  color: #66CCFF;
+}
+
 
 .comment-count {
   position:relative;
@@ -124,10 +132,13 @@ form.aria-label {
 }
 
 .modal__bg{
-   background: rgba(0,0,0,0.3);
-    height: 100vh;
-    position: absolute;
-    width: 100%;
+   background-color: rgba(255, 255, 255, .35);
+   pointer-events: none;
+   opacity: 0.4;
+   transition: opacity .2s ease-in-out;
+   height: 100vh;
+   position: absolute;
+   width: 100%;
 }
 .modal__content {
     left: 50%;
